<resources>

    <!-- App name -->
    <string name="app_name">WOKO_APP</string>

    <!-- Login -->
    <string name="login_username">Benutzername</string>
    <string name="login_hint">Max Muster</string>
    <string name="login_password">Passwort</string>

    <!-- Header -->
    <string name="header_name">Max Muster</string>
    <string name="header_role">Hausverantwortlicher</string>
    <string name="header_adress"></string>

    <!-- Home Screen -->
    <string name="home_new_protocol">jüngstes Protokoll:</string>
    <string name="home_old_protocol">älteres Protokoll auswählen:</string>

    <!-- Edit Screens -->
    <string name="edit_title">Abnahmeprotokoll</string>
    <string name="kitchen">&#xf0f5; Küche</string>
    <string name="bathroom">Badezimmer</string>
    <string name="room">&#xf236; Zimmer</string>
    <string name="balcony">Balkon</string>
    <string name="basement">Keller</string>
    <string name="personal_data">&#xf007; Personalien</string>
    <string name="save">&#xf0c7; Speichern</string>
    <string name="stop">&#xf00d; Abbrechen</string>
    <string name="fridge">Kühlschrank, Tiefkühlfach</string>
    <string name="oven">Backofen, Herdplatte</string>
    <string name="ventialtion">Dampfabzug</string>
    <string name="cutlery">Pfannen, Geschirr, Besteck</string>
    <string name="cupboard">Schränke</string>
    <string name="wall">Wände, Decke</string>
    <string name="floor">Bodem</string>
    <string name="window">Fenster</string>
    <string name="door">Tür</string>
    <string name="socket">Lampen, Steckdosen</string>
    <string name="radiator">Heizkörper, Ventil</string>
    <string name="toilet">WC, Dusche, Lavabo</string>
    <string name="matress">Bettwäsche, Matratze</string>
    <string name="furniture">Mobiliar</string>

    <!-- arrays -->
    <string-array name="header_column_normal">
        <item></item>
        <item>Ja</item>
        <item>Nein</item>
        <item>alter Eintrag</item>
        <item>Kommentar</item>
        <item>Foto</item>
    </string-array>
    <string-array name="header_column_special">
        <item></item>
        <item>Anzahl</item>
        <item>fehlend/defekt</item>
        <item>alter Eintrag</item>
        <item>Kommentar</item>
        <item>Foto</item>
    </string-array>
    <string-array name="fridge_list">
        <item>Sind alle Esswaren entsorgt?</item>
        <item>Starke Verschmutzungen sind gereinigt?</item>
        <item>Wurden abgetaut und das Wasser aufgewischt?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="oven_list">
        <item>Backofen ist gereingt?</item>
        <item>Herd ist gereinigt?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="ventilation_list">
        <item>Ist gereinigt?</item>
        <item>Funktioniert?</item>
        <item>Lämpchen sind intakt?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="cutlery_list">
        <item>Gabel</item>
        <item>Messer</item>
        <item>Löffel</item>
        <item>Brotmesser</item>
        <item>Eimer</item>
    </string-array>
    <string-array name="cupboard_list">
        <item>Sind gereinigt?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="wall_list">
        <item>Sind alle Flecken entfernt?</item>
        <item>Sind keine Löcher zu sehen?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="floor_list">
        <item>Ist besenrein?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="window_list">
        <item>Sind gereinigt?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="door_list">
        <item>Sind alle Flecken entfernt?</item>
        <item>Sind keine Löcher zu sehen?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="socket_list">
        <item>Funktionieren?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="radiator_list">
        <item>Heitzung ist angeschalten?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="toilet_list">
        <item>Duschvorhang wurde gewaschen und aufgehängt?</item>
        <item>Dusche ist in Ordnung?</item>
        <item>WC ist in Ordnung?</item>
        <item>Lavabo ist in Ordnung?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="matress_list">
        <item>Wurden gewaschen ,getrocknet und gefaltet?</item>
        <item>Matratzenschoner wurde bei 60 gewaschen?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="furniture_list">
        <item>Bettgestell</item>
    </string-array>
    <string-array name="balcony_list">
        <item>Ist besenrein?</item>
        <item>Ist alles intakt?</item>
    </string-array>
    <string-array name="basement_list">
        <item>Ist besenrein?</item>
        <item>Persönliche Gegenstände wurden entfernt?</item>
        <item>Ist alles intakt?</item>
    </string-array>

    <!-- icons -->
    <string name="user_icon">&#xf007;</string>
    <string name="cutlery_icon">&#xf0f5;</string>
    <string name="bed_icon">&#xf236;</string>
    <string name="save_icon">&#xf0c7;</string>
    <string name="close_icon">&#xf00d;</string>
    <string name="file_icon">&#xf15c;</string>

    <!-- buttons -->
    <string name="logout_btn">Logout &#xf08b;</string>
    <string name="back_btn">&#xf053; Zurück</string>
    <string name="next_btn">Weiter &#xf054;</string>
    <string name="login_btn">&#xf090; Login</string>
    <string name="open_btn">&#xf1c1; Öffnen</string>
    <string name="edit_btn">&#xf044; Bearbeiten</string>
    <string name="duplicate_btn">&#xf0c5; Duplizieren</string>
    <string name="close_btn">&#xf00d; Schliessen</string>
    <string name="stop_btn">&#xf053; Abbrechen</string>
    <string name="save_btn">Speichern &#xf0c7;</string>
    <string name="send_btn">Senden &#xf1d9;</string>
    <string name="picture_btn">&#xf03e;</string>
    <string name="camera_btn">&#xf030;</string>
    <string name="search_btn">&#xf002; Suchen</string>

    <!-- Duplicate Fragment -->
    <string name="control_date">Abnahmetermin:</string>
    <string name="address">Adresse:</string>
    <string name="apartment_number">Wohnungsnummer:</string>
    <string name="room_number">Zimmernummer:</string>

    <!-- Create Protocol Fragment -->
    <string name="no_protocol">Kein Protokoll vorhanden</string>
    <string name="create_new">neues Protokoll erstellen</string>

</resources>
