<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.woko_app.fragment.DuplicateFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight="1"
                android:layout_marginLeft="100sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/control_date"
                    android:id="@+id/control_date"
                    android:layout_marginTop="80sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:id="@+id/address"
                    android:layout_marginTop="120sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apartment_number"
                    android:id="@+id/apartmentNr"
                    android:layout_marginTop="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_number"
                    android:id="@+id/roomNr"
                    android:layout_marginTop="20sp"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight="1">

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePicker"
                    android:scaleY="0.8"
                    android:scaleX="0.8"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etAddress"
                    android:layout_marginTop="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etApartmentNr"
                    android:layout_marginTop="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etRoomNr"
                    android:layout_marginTop="20sp"
                    android:visibility="invisible"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/stop_btn"
            android:id="@+id/btnStop"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/next_btn"
            android:id="@+id/btnNext"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</FrameLayout>
