<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.woko_app.HV_EditActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:id="@+id/header"
        android:gravity="center_vertical"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="15sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/user_icon"
                android:id="@+id/usericon"
                android:textSize="55sp"
                android:layout_gravity="left"
                android:layout_alignParentLeft="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/usericon"
                android:layout_marginLeft="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtRole"  />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/hv_edit_title"
                android:text="@string/edit_title"
                android:textSize="40sp"
                android:layout_centerInParent="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/logo"
                android:src="@drawable/logo_klein"
                android:layout_gravity="right"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

    </LinearLayout>

    <View style="@style/HorizontalDividerStyle"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:id="@+id/list_holder"
            android:background="@color/grey_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btnNext"
                android:scrollbars="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/datagrid_container"
                    android:fillViewport="true"
                    android:scrollbars="horizontal"/>

            </ScrollView>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/back_btn"
                android:id="@+id/btnBack"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:visibility="invisible"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/next_btn"
                android:id="@+id/btnNext"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:visibility="invisible"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
